--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <title>Document</title>
 </head>
 <body>
   <h1>Login</h1>
+
+  <form action="/users/login" method="POST">
+    <div>
+      <input type="text" id="username" name="username" placeholder="Username" required>
+    </div>
+    <div>
+      <input type="text" id="password" name="password" placeholder="Password" required>
+    </div>
+    <div>
+      <input type="submit" value="Login" />
+    </div>
+    <a href="/users/register">Register here</a>
+  </form>
 </body>
 </html>
