--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 <body>
   <h1>Login</h1>
 
-  <form action="/users/login" method="POST">
+  <form action="/api/test/user" method="POST">
     <div>
       <input type="text" id="username" name="username" placeholder="Username" required>
     </div>
