--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
 <body>
   <h1>Register</h1>
 
-  <form action="/users/register" method="POST">
+  <form action="/api/register" method="POST">
     <div>
       <input type="text" id="username" name="username" placeholder="Username" required>
     </div>
