--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
     <div>
       <input type="submit" value="Login" />
     </div>
-    <a href="/users/register">Register here</a>
+    <a href="/register">Register here</a>
   </form>
 </body>
 </html>
