--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,14 @@
 </head>
 <body>
   <h1>Register</h1>
+  <ul>
+    <% if(typeof registrationErrors != 'undefined') { %>
+      <% registrationErrors.forEach(error=>{ %>
+        <li><%=error.message %></li>
+      <% }) %>
+    <% } %>
+  </ul>
+  
 
   <form action="/api/register" method="POST">
     <div>
@@ -22,14 +30,14 @@
     <div>
       <label for="lang">Role: </label>
       <select name="role" id="role">
-        <option value="Admin">Admin</option>
-        <option value="User">User</option>
+        <option value="admin">Admin</option>
+        <option value="user">User</option>
       </select>
     </div>
     <div>
       <input type="submit" value="Register" />
     </div>
-    <a href="/users/login">Already registered? Login here</a>
+    <a href="/login">Already registered? Login here</a>
   </form>
 </body>
 </html>
