--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Dashboard</h1>
-    <a href="/users/logout">Logout</a>
+    <a href="/logout">Logout</a>
   <p>Hello, <%= user %></p>
 </body>
 </html>
