--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Dashboard</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Dashboard</h1>
     <a href="/logout">Logout</a>
-  <p>Hello, <%= user %></p>
-</body>
+    <p>Hello, <%= user %></p>
+  </body>
 </html>
