--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -10,7 +10,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Dashboard</h1>
+    <h1>user Dashboard</h1>
 
     <h2>Applications Table</h2>
 
