--- a/views/adminAppTemplates.ejs
+++ b/views/adminAppTemplates.ejs
@@ -13,6 +13,28 @@
         margin: 0;
         display: flex;
       }
+
+      button {
+        display: inline-block;
+        outline: 0;
+        border: none;
+        box-shadow: none;
+        cursor: pointer;
+        padding: 9px 22px;
+        font-size: 22px;
+        height: 50px;
+        font-weight: 400;
+        color: #fff;
+        text-align: center;
+        line-height: normal;
+        background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+        border-radius: 50px;
+        transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
+        :hover{
+            box-shadow: 0 0 0 0.15rem #5ceace;
+        }
+      }
+
       .sidebar {
         height: 100vh;
         width: 250px;
@@ -97,6 +119,10 @@
     <div class="main-content">
       <h2>Application Templates Table</h2>
 
+      <a href="/template">
+        <button>Create new application template</button>
+      </a>
+      
       <div class="table-container">
         <table>
           <thead>
