--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -95,7 +95,7 @@
     </div>
 
     <div class="main-content">
-      <h2>Applications Table</h2>
+      <h2>Applications</h2>
 
       <div class="table-container">
         <table>
