change label for dropdown menu

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,7 +47,7 @@
         />
       </div>
       <div>
-        <label for="lang">Role: </label>
+        <label for="role">Role: </label>
         <select name="role" id="role">
           <option value="admin">Admin</option>
           <option value="user">User</option>
