--- a/views/newTemplate.ejs
+++ b/views/newTemplate.ejs
@@ -48,6 +48,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- add a back button -->
     <h1>Create a new application template</h1>
 
     <form action="/api/templates" method="POST">
