--- a/views/adminAppTemplates.ejs
+++ b/views/adminAppTemplates.ejs
@@ -111,7 +111,7 @@
       <div>
         <h2>Menu</h2>
         <a href="/api/templates">Application Templates</a>
-        <a href="javascript:window.history.back()">Submitted Applications</a>
+        <a href="/adminDashboard">Submitted Applications</a>
       </div>
       <a href="/login">Logout</a>
     </div>
@@ -119,7 +119,7 @@
     <div class="main-content">
       <h2>Application Templates Table</h2>
 
-      <a href="/template">
+      <a href="/newTemplate">
         <button>Create new application template</button>
       </a>
       
