change returned renders in api.js to redirects, fix sidebar navigation urls

--- a/views/adminAppTemplates.ejs
+++ b/views/adminAppTemplates.ejs
@@ -110,10 +110,10 @@
     <div class="sidebar">
       <div>
         <h2>Menu</h2>
-        <a href="/api/templates">Application Templates</a>
+        <a href="/adminAppTemplates">Application Templates</a>
         <a href="/adminDashboard">Submitted Applications</a>
       </div>
-      <a href="/login">Logout</a>
+      <a href="/logout">Logout</a>
     </div>
 
     <div class="main-content">
