--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -89,9 +89,9 @@
       <div>
         <h2>Menu</h2>
         <a href="/adminAppTemplates">Application Templates</a>
-        <a href="#" onclick="window.location.reload(true);">Submitted Applications</a>
+        <a href="/adminDashboard">Submitted Applications</a>
       </div>
-      <a href="/api/logout">Logout</a>
+      <a href="/logout">Logout</a>
     </div>
 
     <div class="main-content">
