--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -89,10 +89,10 @@
     <div class="sidebar">
       <div>
         <h2>Menu</h2>
-        <a href="/api/createApp">Submit New Application</a>
+        <a href="/submitApp">Submit New Application</a>
         <a href="/userDashboard">Submitted Applications</a>
       </div>
-      <a href="/api/logout">Logout</a>
+      <a href="/logout">Logout</a>
     </div>
 
     <div class="main-content">
