fix broken link, add todo comments

--- a/views/adminAppTemplates.ejs
+++ b/views/adminAppTemplates.ejs
@@ -111,7 +111,7 @@
       <div>
         <h2>Menu</h2>
         <a href="/adminAppTemplates">Application Templates</a>
-        <a href="/adminDashboard">Submitted Applications</a>
+        <a href="/dashboard">Submitted Applications</a>
       </div>
       <a href="/logout">Logout</a>
     </div>
@@ -145,3 +145,7 @@
 
   </body>
 </html>
+
+<!-- TODO:
+  ADD NAME, NUMBER, EMAIL fields
+-->
