fix broken link in submitApp.ejs

--- a/views/submitApp.ejs
+++ b/views/submitApp.ejs
@@ -76,7 +76,7 @@
       <div>
         <h2>Menu</h2>
         <a href="/submitApp">Submit New Application</a>
-        <a href="/userDashboard">Submitted Applications</a>
+        <a href="/dashboard">Submitted Applications</a>
       </div>
       <a href="/logout">Logout</a>
     </div>
