--- a/views/submitApp.ejs
+++ b/views/submitApp.ejs
@@ -97,6 +97,47 @@
           </div>
         </div>
         <div>
+          <label for="first_name">First Name:</label>
+          <input
+            type="text"
+            id="first_name"
+            name="first_name"
+            placeholder="First name"
+            required
+          />
+        </div>
+        <div>
+          <label for="first_name">Last Name:</label>
+          <input
+            type="text"
+            id="last_name"
+            name="last_name"
+            placeholder="Last name"
+            required
+          />
+        </div>
+        <div>
+          <label for="first_name">Phone Number:</label>
+          <input
+          type="text"
+          id="phone_number"
+          name="phone_number"
+          placeholder="XXXXXXXXXX"
+          required
+          />
+        </div>
+        <div>
+          <label for="first_name">Email:</label>
+          <input
+            type="text"
+            id="email"
+            name="email"
+            placeholder="Email"
+            required
+          />
+        </div>
+        <div>
+          <label for="first_name">Description:</label>
           <input
             type="text"
             class="descriptionBox"
