--- a/views/adminAppTemplates.ejs
+++ b/views/adminAppTemplates.ejs
@@ -27,11 +27,12 @@
         color: #fff;
         text-align: center;
         line-height: normal;
-        background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+        background: linear-gradient(90deg, #5522fa 0, #0074e4 100%);
         border-radius: 50px;
-        transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
-        :hover{
-            box-shadow: 0 0 0 0.15rem #5ceace;
+        transition: color 0.2s ease, background-color 0.2s ease,
+          box-shadow 0.2s ease;
+        :hover {
+          box-shadow: 0 0 0 0.15rem #5ceace;
         }
       }
 
@@ -122,12 +123,12 @@
       <a href="/newTemplate">
         <button>Create new application template</button>
       </a>
-      
+
       <div class="table-container">
         <table>
           <thead>
             <tr>
-              <th>app_template_id</th>
+              <th>application_template_id</th>
               <th>vendor_type</th>
             </tr>
           </thead>
@@ -142,7 +143,6 @@
         </table>
       </div>
     </div>
-
   </body>
 </html>
 
