--- a/views/submitApp.ejs
+++ b/views/submitApp.ejs
@@ -84,7 +84,7 @@
     <div class="main-content">
     <h1>Submit an application for the great event known as foodventeny</h1>
 
-      <form action="/api/submission" method="POST">
+      <form action="/apps" method="POST">
         <div>
           <div>
             <label for="vendorType">Vendor Type:</label>
