--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
   <body>
     <h1>Login</h1>
 
-    <form action="/api/login" method="POST">
+    <form action="/login" method="POST">
       <div>
         <input
           type="text"
