rename view files to be more descriptive

--- a/views/createNewTemplate.ejs
+++ b/views/createNewTemplate.ejs
@@ -51,7 +51,7 @@
     <!-- add a back button -->
     <h1>Create a new application template</h1>
 
-    <form action="/api/templates" method="POST">
+    <form action="/template" method="POST">
       <div>
         <input
           type="text"
