--- a/views/userSubmitApplication.ejs
+++ b/views/userSubmitApplication.ejs
@@ -75,10 +75,10 @@
     <div class="sidebar">
       <div>
         <h2>Menu</h2>
-        <a href="/submitApp">Submit New Application</a>
-        <a href="/dashboard">Submitted Applications</a>
+        <a href="/template/vendors">Submit New Application</a>
+        <a href="/apps">Submitted Applications</a>
       </div>
-      <a href="/logout">Logout</a>
+      <a href="/user/logout">Logout</a>
     </div>
 
     <div class="main-content">
