--- a/views/adminApplicationTemplates.ejs
+++ b/views/adminApplicationTemplates.ejs
@@ -111,16 +111,16 @@
     <div class="sidebar">
       <div>
         <h2>Menu</h2>
-        <a href="/adminAppTemplates">Application Templates</a>
-        <a href="/dashboard">Submitted Applications</a>
+        <a href="/template">Application Templates</a>
+        <a href="/apps">Submitted Applications</a>
       </div>
-      <a href="/logout">Logout</a>
+      <a href="/user/logout">Logout</a>
     </div>
 
     <div class="main-content">
       <h2>Application Templates Table</h2>
 
-      <a href="/newTemplate">
+      <a href="/template/new">
         <button>Create new application template</button>
       </a>
 
@@ -133,7 +133,7 @@
             </tr>
           </thead>
           <tbody>
-            <% appTemplatesList.forEach(app => { %>
+            <% applicationTemplatesList.forEach(app => { %>
             <tr>
               <td><%= app.id %></td>
               <td><%= app.vendor_type %></td>
