clean up formatting, fix links

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -89,16 +89,16 @@
     <div class="sidebar">
       <div>
         <h2>Menu</h2>
-        <% if(typeof dash !== 'undefined') { %> 
-          <% if(dash.role === 'admin'){ %>
-            <a href="/adminAppTemplates">Application Templates</a>
+        <% if (typeof dash !== 'undefined') { %> 
+          <% if (dash.role === 'admin'){ %>
+            <a href="/template">Application Templates</a>
           <% } else { %>
-            <a href="/submitApp">Submit New Application</a>
-          <%} %>
+            <a href="/template/vendors">Submit New Application</a>
+          <% } %>
         <% } %>
-        <a href="/dashboard">Submitted Applications</a>
+        <a href="/apps">Submitted Applications</a>
       </div>
-      <a href="/logout">Logout</a>
+      <a href="/user/logout">Logout</a>
     </div>
 
     <div class="main-content">
