--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,13 +12,14 @@
   <body>
     <h1>Register</h1>
     <ul>
-      <% if(typeof registrationErrors != 'undefined') { %> <%
-      registrationErrors.forEach(error=>{ %>
-      <li><%=error.message %></li>
-      <% }) %> <% } %>
+      <% if(typeof registrationErrors != 'undefined') { %> 
+          <% registrationErrors.forEach(error=>{ %>
+            <li><%=error.message %></li>
+        <% }) %>
+      <% } %>
     </ul>
 
-    <form action="/api/register" method="POST">
+    <form action="/user/register" method="POST">
       <div>
         <input
           type="text"
